<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/restaurant_head"
        layout="@layout/common_above_title" />

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:gravity="center"
            android:hint="@string/changeLocal_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_changeLocal_search" />
        <Button
            android:visibility="gone"
            android:text="@string/btn_search"
            android:id="@+id/btn_changePoint_exit"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_changeLocal_address"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/sandybrown"
        android:id="@+id/layout_localAgain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeLocal_localText" />

        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_changeLocal_localAddress" />
            <ImageView
                android:src="@mipmap/location"
                android:layout_toLeftOf="@+id/tv_changeLocal_tip"
                android:layout_width="16dp"
                android:layout_height="16dp" />
            <TextView
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:text="@string/changeLocal_changeTetx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_changeLocal_tip" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/sandybrown"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeLocal_addressText" />
        <ListView
            android:background="@color/white"
            android:id="@+id/lv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll">
        </ListView>
        <TextView
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/tv_address_null"
            android:text="@string/address_null"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/main_search_pois"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffcccccc"
        android:visibility="gone"/>
</LinearLayout>