<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountPage.LoginActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_below="@+id/tv_show"
        android:layout_toLeftOf="@+id/tv_show"
        android:layout_toStartOf="@+id/tv_show" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_show"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:id="@+id/tv_name"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:id="@+id/tv_password"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/tv_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:id="@+id/txt_name"
        android:hint="@string/tip_name"
        android:layout_toRightOf="@+id/tv_name"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:id="@+id/txt_password"
        android:password="true"
        android:layout_below="@+id/txt_name"
        android:layout_alignLeft="@+id/txt_name"
        android:layout_alignStart="@+id/txt_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册"
        android:id="@+id/btn_regiest"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_toRightOf="@+id/tv_show"
        android:layout_toEndOf="@+id/tv_show"
        android:onClick="showRegiest"/>
</RelativeLayout>
