<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:layout_centerVertical="true"
            android:background="@mipmap/back"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_search_back" />

        <EditText
            android:layout_toRightOf="@+id/img_search_back"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:hint="@string/et_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/et_search" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_search"
            android:id="@+id/btn_search" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:background="#ffffff"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_list" />
        <LinearLayout
            android:id="@+id/layout_search_null"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@mipmap/search_null"
                android:layout_width="128dp"
                android:layout_height="128dp" />
            <TextView
                android:text="@string/search_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>