<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:layout_centerVertical="true"
            android:background="@mipmap/back"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_search_back" />

        <EditText
            android:layout_toRightOf="@+id/img_search_back"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:hint="@string/et_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/et_search" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_search"
            android:id="@+id/btn_search" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/layout_top"
        android:layout_above="@+id/layout_bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:padding="5dp"
            android:id="@+id/lv_searchMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
        <LinearLayout
            android:id="@+id/layout_search_null"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@mipmap/search_null"
                android:layout_width="128dp"
                android:layout_height="128dp" />
            <TextView
                android:text="@string/search_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:padding="5dp"
        android:id="@+id/layout_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img_cart"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/cart_have"
            android:layout_width="45dp"
            android:layout_height="45dp" />
        <TextView
            android:textSize="10dp"
            android:gravity="center"
            android:id="@+id/tv_cart_num"
            android:textColor="@color/white"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="3dp"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:textSize="12dp"
            android:gravity="center"
            android:layout_toRightOf="@+id/img_cart"
            android:id="@+id/tv_cart_totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:gravity="center"
            android:id="@+id/tv_cart_startingPrice"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Button
            android:visibility="gone"
            android:id="@+id/btn_cart_buy"
            android:background="@color/lightskyblue"
            android:textColor="@color/white"
            android:text="@string/cart_buy"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
    </RelativeLayout>
</RelativeLayout>