<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/luckybug_top"
        android:layout_alignParentTop="true"
        android:background="#f9ed9759"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@mipmap/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_luckybug_back" />

        <ImageButton
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@mipmap/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_luckybug_return" />

        <TextView
            android:textSize="20dp"
            android:textColor="#fff"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/luckyBug_title"
            android:id="@+id/tv_luckybug_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/luckybug_top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:background="#ffffff"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_luckyBug" />
        <LinearLayout
            android:id="@+id/layout_search_null"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@mipmap/luckybug_null"
                android:layout_width="129dp"
                android:layout_height="127dp" />
            <TextView
                android:text="@string/luckyBug_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/layout_luckyBug_bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:text="@string/luckyBug_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>