<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_main_point" />
    </LinearLayout>
    <RelativeLayout
        android:padding="5dp"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_toLeftOf="@+id/btn_index_search"
            android:gravity="center"
            android:textSize="12dp"
            android:background="@drawable/bg_edittext"
            android:layout_alignParentLeft="true"
            android:hint="@string/et_search"
            android:id="@+id/et_index_search"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <Button
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_index_search"
            android:text="@string/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <in.srain.cube.views.ptr.PtrFrameLayout
        android:id="@+id/rotate_header_list_view_frame"
        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        cube_ptr:ptr_duration_to_close="200"
        cube_ptr:ptr_duration_to_close_header="1000"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="false"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.7">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.a84064.eatapp.View.ExpandMenuView
                android:id="@+id/expandTabView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/them_brown" />
            <android.support.v7.widget.RecyclerView
                android:background="#ffffff"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_list"
                />
            <TextView
                android:visibility="gone"
                android:text="@string/shop_null"
                android:id="@+id/tv_index_null"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </in.srain.cube.views.ptr.PtrFrameLayout>

</LinearLayout>